--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
     <link rel="stylesheet" href="./styles/styles.css">
-    <script src="https://kit.fontawesome.com/8bc1d9d01e.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/8bc1d9d01e.js" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
     <title>my dark website </title>
 </head>
 <body>
@@ -31,31 +33,50 @@
     </header>
 
     <section>
-        <div class="inner_container">
-            <div class="logo ">
-            <img class="logo_image" src="./img/logo.svg" alt="logo" />
-            </div>
-            <i class="contact__i fab fa-facebook-f"></i><p class="p_header"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima cumque suscipit vitae quis optio voluptates quam natus iure eligendi at!</p>
-            <i class="contact__i fab fa-facebook-f"></i><p>+1-543-123-4567</p>
-            <i class="contact__i fab fa-facebook-f"></i><p>example@email.com</p>
-            <h2> About Us</h2>
-            <h2> Jobs </h2>
-            <h2> Press </h2>
-            <h2> Blog </h2>
-            <div>
-                <i></i>
-                <i></i>
-                <i></i>
-            </div>
-
+       <div class="inner_container">
+           <div>
+               <img class="" src="./img/icon-access-anywhere.svg"/>
+               <h3 class=""></h3>
+               <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus. Nesciunt minus facere fugit voluptate.</p>
+           </div>
+           <div>
+            <img class="" src="./img/icon-security.svg"/>
+            <h3 class=""></h3>
+            <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus. Nesciunt minus facere fugit voluptate.</p>
         </div>
+        <div>
+            <img class="" src="./img/icon-collaboration.svg"/>
+            <h3 class=""></h3>
+            <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, temporibus. Nesciunt minus facere fugit voluptate.</p>
+        </div>
+       </div>
     </section>
     <section>
     </section>
 
     <footer>
+        <div class="inner_container">
+            <div class="logo ">
+            <img class="logo_image_2" src="./img/logo.svg" alt="logo" />
+            </div>
+            <img class="" src="./img/icon-location.svg"/>
+            <p class="p_header"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima cumque suscipit vitae quis optio voluptates quam natus iure eligendi at!</p>
+            <img class="" src="./img/icon-phone.svg"/>
+            <p>+1-543-123-4567</p>
+            <img class="" src="./img/icon-email.svg"/>
+            <p>example@email.com</p>
+            <h2> About Us</h2>
+            <h2> Jobs </h2>
+            <h2> Press </h2>
+            <h2> Blog </h2>
+            <div>
+                <i class="social__item fab fa-twitter"></i>
+                <i class="social__item fab fa-facebook-f"></i>
+                <i class="social__item fab fa-twitter"></i>
+            </div>
 
+        </div>
     </footer>
     
 </body>
-</html>
+</html> 
